--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -124,21 +124,35 @@
       }
     }
 
-    &--popup {
+    &--specs-popup,
+    &--pricing-popup {
       position: absolute;
       z-index: -1;
       top: 0;
-      left: -1px;
+      left: 0;
+      width: 100%;
+      pointer-events: none;
       background-color: var(--yellow-50);
       border: 1px solid var(--yellow-400);
       margin-top: -1rem;
       padding: 0.5rem 1rem;
       border-radius: 5px;
       transition: transform 150ms ease-in;
+    }
+
+    &--specs-popup {
       transform: translateY(1.4rem);
 
       &-show {
         transform: translateY(5rem);
+      }
+    }
+
+    &--pricing-popup {
+      transform: translateY(1.4rem);
+
+      &-show {
+        transform: translateY(4.25rem);
       }
     }
 
