--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -285,6 +285,10 @@
 
   &-7 {
     order: 7;
+
+    @include breakpoint(lg-tablet) {
+      grid-column: 1/-1;
+    }
   }
 
   &-8 {
@@ -294,11 +298,7 @@
     @include breakpoint(lg-tablet) {
       order: 9;
       padding: 1rem 0;
-      grid-column: 1/3;
-    }
-
-    @include breakpoint(md-tablet) {
-      grid-column: 1/2;
+      grid-column: 1/-1;
     }
 
     &--i300 {
@@ -314,7 +314,7 @@
     order: 9;
 
     @include breakpoint(lg-tablet) {
-      order: 8;
+      grid-column: 1/-1;
     }
   }
 }
