added navigation guidance to gallery and added documentation on script files

--- a/app/scss/base/_colors.scss
+++ b/app/scss/base/_colors.scss
@@ -81,6 +81,8 @@
   --teal-800: hsl(172, 98%, 20%);
   --teal-900: hsl(176, 100%, 13%);
 
+  --animation-function: cubic-bezier(0.68, -0.6, 0.32, 1.6);
+
   --shadow-color: 214deg 37% 59%;
 
   --shadow-elevation-low:
