--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -220,7 +220,7 @@
 
 .testimonials {
   padding: 20rem 0;
-  background-color: var(--blue-50);
+  background-color: var(--blue-gray-50);
 
   &__container {
     display: flex;
