--- a/app/scss/base/_breakpoints.scss
+++ b/app/scss/base/_breakpoints.scss
@@ -4,18 +4,18 @@ Current media query breakpoints in pixels:
 */
 
 $breakpoints-down: (
-  "sm-mobile": 23.438em,
   //375px
-  "md-mobile": 28.125em,
+  "sm-mobile": 23.438em,
   //450px
-  "sm-tablet": 35.5em,
+  "md-mobile": 28.125em,
   //568px
-  "md-tablet": 48em,
+  "sm-tablet": 35.5em,
   //768px
-  "lg-tablet": 62em,
+  "md-tablet": 48em,
   //992px
-  "sm-desktop": 75em,
+  "lg-tablet": 62em,
   //1200px
+  "sm-desktop": 75em
 );
 
 @mixin breakpoint($size) {
