--- a/app/scss/base/_fonts.scss
+++ b/app/scss/base/_fonts.scss
@@ -1,65 +1,65 @@
 @font-face {
   font-family: "Right Grotesk Wide Black";
-  src: url("../../../fonts/PPRightGrotesk-WideBlack.woff2") format("woff2"),
+  src: url("../fonts/PPRightGrotesk-WideBlack.woff2") format("woff2"),
     /* Super Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideBlack.woff") format("woff"),
+    url("../fonts/PPRightGrotesk-WideBlack.woff") format("woff"),
     /* Pretty Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideBlack.ttf") format("truetype");
+    url("../fonts/PPRightGrotesk-WideBlack.ttf") format("truetype");
   /* Safari, Android, iOS */
   font-display: swap;
 }
 
 @font-face {
   font-family: "Right Grotesk Wide Fine";
-  src: url("../../../fonts/PPRightGrotesk-WideFine.woff2") format("woff2"),
+  src: url("../fonts/PPRightGrotesk-WideFine.woff2") format("woff2"),
     /* Super Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideFine.woff") format("woff"),
+    url("../fonts/PPRightGrotesk-WideFine.woff") format("woff"),
     /* Pretty Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideFine.ttf") format("truetype");
+    url("../fonts/PPRightGrotesk-WideFine.ttf") format("truetype");
   /* Safari, Android, iOS */
   font-display: swap;
 }
 
 @font-face {
   font-family: "Right Grotesk Wide Medium";
-  src: url("../../../fonts/PPRightGrotesk-WideMedium.woff2") format("woff2"),
+  src: url("../fonts/PPRightGrotesk-WideMedium.woff2") format("woff2"),
     /* Super Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideMedium.woff") format("woff"),
+    url("../fonts/PPRightGrotesk-WideMedium.woff") format("woff"),
     /* Pretty Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-WideMedium.ttf") format("truetype");
+    url("../fonts/PPRightGrotesk-WideMedium.ttf") format("truetype");
   /* Safari, Android, iOS */
   font-display: swap;
 }
 
 @font-face {
   font-family: "Right Grotesk Spatial Fine";
-  src: url("../../../fonts/PPRightGrotesk-SpatialFine.woff2") format("woff2"),
+  src: url("../fonts/PPRightGrotesk-SpatialFine.woff2") format("woff2"),
     /* Super Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-SpatialFine.woff") format("woff"),
+    url("../fonts/PPRightGrotesk-SpatialFine.woff") format("woff"),
     /* Pretty Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-SpatialFine.ttf") format("truetype");
+    url("../fonts/PPRightGrotesk-SpatialFine.ttf") format("truetype");
   /* Safari, Android, iOS */
   font-display: swap;
 }
 
 @font-face {
   font-family: "Right Grotesk Medium";
-  src: url("../../../fonts/PPRightGrotesk-Medium.woff2") format("woff2"),
+  src: url("../fonts/PPRightGrotesk-Medium.woff2") format("woff2"),
     /* Super Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-Medium.woff") format("woff"),
+    url("../fonts/PPRightGrotesk-Medium.woff") format("woff"),
     /* Pretty Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-Medium.ttf") format("truetype");
+    url("../fonts/PPRightGrotesk-Medium.ttf") format("truetype");
   /* Safari, Android, iOS */
   font-display: swap;
 }
 
 @font-face {
   font-family: "Right Grotesk Compact Black";
-  src: url("../../../fonts/PPRightGrotesk-CompactBlack.woff2") format("woff2"),
+  src: url("../fonts/PPRightGrotesk-CompactBlack.woff2") format("woff2"),
     /* Super Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-CompactBlack.woff") format("woff"),
+    url("../fonts/PPRightGrotesk-CompactBlack.woff") format("woff"),
     /* Pretty Modern Browsers */
-    url("../../../fonts/PPRightGrotesk-CompactBlack.ttf") format("truetype");
+    url("../fonts/PPRightGrotesk-CompactBlack.ttf") format("truetype");
   /* Safari, Android, iOS */
   font-display: swap;
 }
