--- a/app/scss/sections/_team.scss
+++ b/app/scss/sections/_team.scss
@@ -154,7 +154,7 @@
 
 .join-us {
   &__content {
-    background-image: url(../../../images/icons/icon_logo-symbol-transparent.svg);
+    background-image: url(../images/icons/icon_logo-symbol-transparent.svg);
     background-repeat: no-repeat;
     background-position: 87% 35%;
     background-size: 25%;
