--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -169,7 +169,7 @@ small {
       width: 100%;
       height: 25px;
       background-repeat: no-repeat;
-      background-image: url("../../../images/illustrations/strikethrough.svg");
+      background-image: url("../images/illustrations/strikethrough.svg");
     }
   }
 }
