--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -232,7 +232,7 @@
     padding: 1rem 0;
     border-radius: 5px;
     background-color: #ffc43a;
-    background-image: url(../../../images/icons/icon_paypal.svg);
+    background-image: url(../images/icons/icon_paypal.svg);
     background-repeat: no-repeat;
     background-position: center center;
   }
