--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -255,7 +255,7 @@
         width: 120px;
         height: 120px;
         content: "";
-        background-image: url(../../../images/illustrations/question-marks.svg);
+        background-image: url(../images/illustrations/question-marks.svg);
         background-repeat: no-repeat;
         background-position: center;
       }
@@ -286,7 +286,7 @@
   }
 
   &__partnership {
-    background-image: url("../../../images/backgrounds/bg-vosk.svg");
+    background-image: url("../images/backgrounds/bg-vosk.svg");
     background-repeat: no-repeat;
     background-position: 55% 20%;
 
