--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -160,26 +160,26 @@
     }
 
     &-img-control {
-      background-image: url("../../../images/illustrations/app-control.png");
+      background-image: url("../images/illustrations/app-control.png");
 
       @include breakpoint(sm-tablet) {
-        background-image: url("../../../images/illustrations/app-control-mobile.png");
+        background-image: url("../images/illustrations/app-control-mobile.png");
       }
     }
 
     &-img-monitor {
-      background-image: url("../../../images/illustrations/app-monitor.png");
+      background-image: url("../images/illustrations/app-monitor.png");
 
       @include breakpoint(sm-tablet) {
-        background-image: url("../../../images/illustrations/app-monitor-mobile.png");
+        background-image: url("../images/illustrations/app-monitor-mobile.png");
       }
     }
 
     &-img-alerts {
-      background-image: url("../../../images/illustrations/app-alerts.png");
+      background-image: url("../images/illustrations/app-alerts.png");
 
       @include breakpoint(sm-tablet) {
-        background-image: url("../../../images/illustrations/app-alerts-mobile.png");
+        background-image: url("../images/illustrations/app-alerts-mobile.png");
       }
     }
   }
