--- a/app/scss/components/_gallery.scss
+++ b/app/scss/components/_gallery.scss
@@ -79,7 +79,7 @@
     position: fixed;
     width: 100dvw;
     height: 100dvh;
-    transition: all 300ms ease-in;
+    transition: all 300ms ease-in; // this transition allows the modal to fade out smoothly
   }
 
   &__photo {
@@ -225,7 +225,7 @@
   border-radius: 5px;
   object-fit: cover;
   border: 1px solid var(--blue-200);
-  transition: all .2s ease-in-out;
+  transition: border 200ms ease-in-out, box-shadow 200ms ease-in-out;
 
   &:hover {
     cursor: pointer;
