--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -10,7 +10,7 @@
   padding: 1em;
   border-radius: 10px;
   border: 3px solid var(--yellow-500);
-  transition: all 150ms ease-in;
+  transition: transform 150ms ease-in, opacity 150ms ease-in, visibility 150ms ease-in;
 
   &::after {
     content: "";
