--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -27,5 +27,7 @@
 @use "sections/bundle";
 @use "sections/turnkey";
 @use "sections/voskcoin";
+@use "sections/recruitment";
 @use "utils/flex";
+@use "utils/grid";
 @use "utils/utilities";
