--- a/app/scss/sections/_recruitment.scss
+++ b/app/scss/sections/_recruitment.scss
@@ -3,7 +3,11 @@
 .recruitment {
   &__hero {
     p {
-      width: 55ch;
+      max-width: 55ch;
+
+      @include breakpoint(lg-tablet) {
+        margin: 0 auto;
+      }
     }
   }
 
@@ -15,25 +19,33 @@
     }
 
     h2 {
-      font-family: var(--medium-font);
-      font-weight: 800;
+      font-family: var(--heavy-compact-font);
+      font-size: clamp(1.5rem, 3vw, 2rem);
+      letter-spacing: 0.5px;
+
+      @include breakpoint(lg-tablet) {
+        text-align: center;
+      }
     }
 
-    h4 {
+    h3 {
       color: var(--blue-500);
+      font-size: clamp(1rem, 6vw, 1.5rem);
+      letter-spacing: -0.5px;
       font-family: var(--medium-font);
       font-weight: normal;
     }
 
     span {
-      background-color: var(--blue-50);
-      font-size: 0.8rem;
+      background-color: var(--blue-gray-50);
+      font-size: 0.7rem;
       font-weight: 600;
-      padding: 0.3rem 0.8rem;
+      padding: 0.2rem 0.7rem;
       border-radius: 100vh;
     }
 
     p {
+      font-size: clamp(0.8rem, 3vw, 1rem);
       color: var(--blue-gray-500);
       line-height: 1.6;
     }
