--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -10,18 +10,15 @@
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: clamp(2.5rem, 7vw, 4rem);
   font-weight: 900;
   letter-spacing: -0.5px;
   font-family: var(--heavy-wide-font);
 
-  @include breakpoint(lg-tablet) {
-    font-size: clamp(2rem, 7vw, 4rem);
-  }
-
-  @include breakpoint(sm-mobile) {
+  @include breakpoint(md-mobile) {
     font-family: var(--medium-wide-font);
-    font-size: 1.7rem;
+    font-size: 2.5rem;
+    font-weight: 600;
   }
 }
 
