--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,7 @@
 @use "components/form";
 @use "components/gallery";
 @use "sections/hero";
+@use "sections/hero-2";
 @use "sections/home";
 @use "sections/competitors";
 @use "sections/team";
