--- a/app/scss/components/_subnav.scss
+++ b/app/scss/components/_subnav.scss
@@ -30,6 +30,7 @@
     justify-content: flex-end;
     gap: 2rem;
     padding: 0.25rem 0.5rem;
+    cursor: pointer;
 
     @include breakpoint(sm-tablet) {
       gap: 0.25rem;
