--- a/app/scss/components/_topbar.scss
+++ b/app/scss/components/_topbar.scss
@@ -1,6 +1,8 @@
 @use "../base/breakpoints" as *;
 
 .topbar {
+  position: relative;
+  z-index: 999;
   padding: 0.5rem;
   background: var(--red-500);
 
