--- a/app/scss/sections/_hero-2.scss
+++ b/app/scss/sections/_hero-2.scss
@@ -3,26 +3,112 @@
 .hero {
   position: relative;
   display: flex;
-  gap: 2rem;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
 
   @include breakpoint(md-tablet) {
     flex-direction: column;
+    gap: 2rem;
   }
 
   &__main {
+    padding-top: calc(107px + 4rem); // 107px is the height of the topbar and navbar combined
+
     @include breakpoint(md-tablet) {
       flex-direction: column;
-      padding: 4rem 2rem 23rem;
+      padding: 2rem 2rem 2rem;
     }
 
     @include breakpoint(md-mobile) {
       gap: 2rem;
-      padding: 4rem 1rem 25rem;
+      padding: 2rem 1rem 25rem;
     }
 
     @include breakpoint(sm-mobile) {
+      padding: 2rem 1rem 22rem;
+    }
+  }
+
+  &__turnkey {
+    padding-top: calc(107px + 4rem); // 107px is the height of the topbar and navbar combined
+  }
+
+  &__m300 {
+    padding-top: calc(107px + 4rem); // 107px is the height of the topbar and navbar combined
+  }
+
+  &__heading {
+    line-height: .9;
+    text-align: center;
+    text-transform: uppercase;
+
+    &--congrats {
+      @include breakpoint(sm-tablet) {
+        content: "Congrats!";
+      }
+    }
+
+    &--left {
+      text-align: left;
+
+      @include breakpoint(lg-tablet) {
+        text-align: center;
+      }
+    }
+
+    &--sm-width {
+      max-width: 13ch;
+    }
+
+    emphasis {
+      color: var(--blue-500);
+    }
+
+    &::after {
+      position: absolute;
+      z-index: -2;
+      top: 2rem;
+      left: 50%;
+      width: 400px;
+      height: 200px;
+
+      content: "";
+      transform: translateX(-50%);
+      background-color: var(--blue-100);
+      filter: blur(90px);
+    }
+  }
+
+  &__subheading {
+    @include breakpoint(md-tablet) {
+      text-align: center;
+    }
+  }
+
+  &__content {
+    display: flex;
+    width: 1080px;
+    margin: 0 auto;
+
+    @include breakpoint(lg-tablet) {
+      width: 100%;
+    }
+
+    @include breakpoint(md-tablet) {
+      flex-direction: column;
+      padding: 0rem 2rem 23rem;
+      gap: 0;
+      align-items: center;
+    }
+
+    @include breakpoint(md-mobile) {
       gap: 2rem;
-      padding: 4rem 1rem 22rem;
+      padding: 0rem 1rem 25rem;
+    }
+
+    @include breakpoint(sm-mobile) {
+      padding: 0rem 1rem 22rem;
     }
   }
 
@@ -30,7 +116,9 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
+    width: 490px;
 
     @include breakpoint(md-tablet) {
       align-items: center;
@@ -47,6 +135,11 @@
     position: relative;
     display: flex;
     align-items: flex-end;
+    width: 50%;
+
+    @include breakpoint(lg-tablet) {
+      width: 400px;
+    }
 
     @include breakpoint(md-tablet) {
       align-items: center;
@@ -55,12 +148,49 @@
     }
   }
 
+  &__video {
+    border-radius: 10px;
+    box-shadow: var(--shadow-elevation-high);
+    width: 100%;
+
+    @include breakpoint(lg-tablet) {
+      width: 370px;
+      height: 210px;
+    }
+  }
+
+  &__body {
+    color: var(--blue-gray-600);
+    font-size: clamp(0.8rem, 2vw, 1rem);
+
+    @include breakpoint(lg-tablet) {
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    &--home {
+      max-width: 55ch;
+
+      @include breakpoint(lg-tablet) {
+        max-width: 45ch;
+      }
+
+      @include breakpoint(sm-tablet) {
+        max-width: 30ch;
+      }
+    }
+
+    &--team {
+      max-width: 45ch;
+    }
+  }
+
   &__cta {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 
-    @include breakpoint(md-tablet) {
+    @include breakpoint(lg-tablet) {
       align-items: center;
       text-align: center;
     }
@@ -69,16 +199,6 @@
       padding: 5px 15px;
       color: white;
       background-color: var(--blue-500);
-    }
-  }
-
-  &__video {
-    border-radius: 10px;
-    box-shadow: var(--shadow-elevation-high);
-
-    @include breakpoint(lg-tablet) {
-      width: 370px;
-      height: 210px;
     }
   }
 
@@ -115,7 +235,7 @@
     }
 
     @include breakpoint(md-tablet) {
-      top: 15rem;
+      top: 10rem;
       transform: scale(.5) translateX(-50%);
     }
 
@@ -124,7 +244,7 @@
     }
 
     @include breakpoint(sm-tablet) {
-      top: 17rem;
+      top: 9rem;
       transform: scale(.5) translateX(-50%);
     }
 
@@ -158,79 +278,6 @@
 
     @include breakpoint(md-mobile) {
       width: 300px;
-    }
-  }
-
-  &__heading {
-    line-height: .9;
-    text-align: center;
-
-    &--congrats {
-      @include breakpoint(sm-tablet) {
-        content: "Congrats!";
-      }
-    }
-
-    &--left {
-      text-align: left;
-
-      @include breakpoint(lg-tablet) {
-        text-align: center;
-      }
-    }
-
-    &--sm-width {
-      max-width: 13ch;
-    }
-
-    emphasis {
-      color: var(--blue-500);
-    }
-
-    &::after {
-      position: absolute;
-      z-index: -2;
-      top: 0;
-      left: 50%;
-      width: 400px;
-      height: 200px;
-
-      content: "";
-      transform: translateX(-50%);
-      background-color: var(--blue-100);
-      filter: blur(90px);
-    }
-  }
-
-  &__subheading {
-    @include breakpoint(md-tablet) {
-      text-align: center;
-    }
-  }
-
-  &__body {
-    color: var(--blue-gray-600);
-    font-size: clamp(0.8rem, 2vw, 1rem);
-
-    @include breakpoint(lg-tablet) {
-      text-align: center;
-      margin: 0 auto;
-    }
-
-    &--home {
-      max-width: 55ch;
-
-      @include breakpoint(lg-tablet) {
-        max-width: 45ch;
-      }
-
-      @include breakpoint(sm-tablet) {
-        max-width: 30ch;
-      }
-    }
-
-    &--team {
-      max-width: 45ch;
     }
   }
 
@@ -294,10 +341,6 @@
     border: 1px solid var(--blue-200);
     border-radius: 100vh;
     background-color: var(--blue-50);
-
-    &:hover {
-      background-color: var(--blue-100);
-    }
 
     @media (max-width: 425px) {
       gap: .3rem;
