--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,7 +17,6 @@
 @use "components/form";
 @use "components/gallery";
 @use "sections/hero";
-@use "sections/hero-2";
 @use "sections/home";
 @use "sections/competitors";
 @use "sections/team";
@@ -28,7 +27,7 @@
 @use "sections/bundle";
 @use "sections/turnkey";
 @use "sections/voskcoin";
-@use "sections/recruitment";
+@use "sections/interview";
 @use "utils/flex";
 @use "utils/grid";
 @use "utils/utilities";
