--- a/app/scss/sections/_interview.scss
+++ b/app/scss/sections/_interview.scss
@@ -2,6 +2,12 @@
 
 .recruitment {
   &__hero {
+    align-items: flex-start;
+
+    @include breakpoint(lg-tablet) {
+      align-items: center;
+    }
+
     p {
       max-width: 55ch;
 
