--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -60,15 +60,25 @@ h6 {
 }
 
 p {
-  font-size: 1rem;
+  font-size: clamp(0.8rem, 2vw, 0.9rem);
+  line-height: 1.5;
   font-weight: 400;
   letter-spacing: -0.3px;
+  color: var(--blue-gray-600);
 }
 
 small {
   font-size: 0.75rem;
   font-weight: 500;
   letter-spacing: -0.1px;
+}
+
+.section {
+  &__heading {
+    line-height: .9;
+    text-align: center;
+    text-transform: uppercase;
+  }
 }
 
 .text {
