--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,7 @@
 @use "components/scroll";
 @use "components/form";
 @use "components/gallery";
+@use "components/labels";
 @use "sections/hero";
 @use "sections/home";
 @use "sections/competitors";
@@ -28,6 +29,7 @@
 @use "sections/turnkey";
 @use "sections/voskcoin";
 @use "sections/interview";
+@use "sections/recruitment";
 @use "utils/flex";
 @use "utils/grid";
 @use "utils/utilities";
