--- a/app/scss/sections/_recruitment.scss
+++ b/app/scss/sections/_recruitment.scss
@@ -11,7 +11,14 @@
     }
   }
 
-  .col-2 {
+  .team {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    @include breakpoint(sm-desktop) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
     &__img-container {
       border-radius: 10px;
     }
@@ -25,51 +32,6 @@
 
       &--full-width {
         width: 100%;
-      }
-    }
-
-    &__gallery {
-      position: relative;
-      border-radius: 10px;
-      overflow: hidden;
-
-      &-img {
-        width: 200px;
-        max-height: 300px;
-        object-fit: none;
-        aspect-ratio: 16/9;
-        border-radius: 10px;
-
-        &--full-width {
-          width: 100%;
-        }
-      }
-
-      &-img-caption {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        z-index: 1;
-        width: 100%;
-        padding: 0.5rem 0;
-        color: var(--blue-gray-50);
-        font-family: var(--medium-font);
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-        text-align: center;
-
-        &::before {
-          content: "";
-          position: absolute;
-          z-index: -1;
-          bottom: 0;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 100%;
-          height: 100%;
-          padding: 2rem 0;
-          background-image: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
-        }
       }
     }
   }
@@ -164,24 +126,51 @@
 
   .perks {
     &__icons {
-      display: grid;
-      grid-template-columns: 4fr 3fr;
+      @include breakpoint(md-tablet) {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        align-items: flex-start;
+        gap: 3rem;
+      }
+
+      @include breakpoint(md-mobile) {
+        gap: 1rem;
+      }
     }
 
     &__icon {
-      height: 64px;
-      width: 64px;
+      height: 96px;
+      width: 96px;
+
+      @include breakpoint(md-tablet) {
+        height: 64px;
+        width: 64px;
+      }
     }
 
     h5 {
       text-align: center;
       font-size: 0.8rem;
+
+      @include breakpoint(md-tablet) {
+        text-align: left;
+      }
     }
   }
 
   .hybrid {
+    @include breakpoint(md-tablet) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 1rem;
+    }
+
     &__row {
       height: 150px;
+
+      @include breakpoint(md-tablet) {
+        height: auto;
+      }
     }
 
     &__title-container {
@@ -191,6 +180,10 @@
       padding: 0.5rem 1rem;
       border: 1px solid var(--blue-gray-200);
       border-radius: 5px;
+
+      @include breakpoint(md-mobile) {
+        height: 100px;
+      }
     }
 
     &__title {
@@ -226,6 +219,10 @@
       background-color: var(--blue-500);
       height: 100%;
 
+      @include breakpoint(md-tablet) {
+        padding: 1rem 0;
+      }
+
       &--remote {
         background-image: linear-gradient(-37.5deg,
             rgb(5, 80, 179) 0%,
@@ -250,7 +247,60 @@
     }
   }
 
-  .environment {}
+  .environment {
+    &__gallery {
+      position: relative;
+      border-radius: 10px;
+      overflow: hidden;
+
+      &-img {
+        width: 200px;
+        max-height: 300px;
+        object-fit: none;
+        aspect-ratio: 16/9;
+        border-radius: 10px;
+
+        @include breakpoint(md-tablet) {
+          object-fit: cover;
+        }
+
+        &--full-width {
+          width: 100%;
+        }
+
+        &--halloween {
+          object-position: top;
+        }
+      }
+
+      &-img-caption {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        padding: 0.5rem 0;
+        color: var(--blue-gray-50);
+        font-family: var(--medium-font);
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        text-align: center;
+
+        &::before {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          width: 100%;
+          height: 100%;
+          padding: 2rem 0;
+          background-image: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+        }
+      }
+    }
+  }
 
   .diversity {
     &__img {
@@ -258,6 +308,10 @@
       object-fit: none;
       object-position: center 30%;
       border-radius: 10px;
+
+      @include breakpoint(md-mobile) {
+        height: 400px;
+      }
     }
   }
 
@@ -265,6 +319,14 @@
     &__video {
       border-radius: 10px;
       overflow: hidden;
+
+      @include breakpoint(sm-desktop) {
+        width: auto;
+      }
     }
+  }
+
+  .join-us {
+    padding-bottom: 4rem;
   }
 }
