--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,6 +26,7 @@
 @use "sections/voskcoin";
 @use "sections/interview";
 @use "sections/recruitment";
+@use "sections/contact";
 @use "utils/flex";
 @use "utils/grid";
 @use "utils/utilities";
