--- a/app/scss/utils/_spacing.scss
+++ b/app/scss/utils/_spacing.scss
@@ -1,13 +1,14 @@
 @use "../base/breakpoints" as *;
 
 .container {
+  /* Using the underscore (_) in variables is a methodology utilized by Lea Verou that indicates a variable is local/scoped (versus global in :root) */
+
+  --_navbar: 73px;
+  --_subnav: 129px;
+
   max-width: 1080px;
   margin: 0 auto;
-  padding: 6rem 2rem;
-
-  @include breakpoint(lg-tablet) {
-    padding: 4rem 2rem;
-  }
+  padding: 4rem 2rem;
 
   @include breakpoint(sm-tablet) {
     padding: 3rem 2rem;
@@ -72,6 +73,18 @@
     @include breakpoint(lg-tablet) {
       margin: auto;
     }
+  }
+
+  
+
+  /* The reason for the following two classes is to push down the main content because GSAP SmoothScroller adds a position:fixed container around the main content with an inset:0px which forces the content to move all the way to the top of the page and gets overlapped by the navbar and subnav */
+
+  &--navbar {
+    padding-top: calc(var(--_navbar) + 4rem); // 73px is the height of the navbar
+  }
+
+  &--subnav {
+    padding-top: calc(var(--_subnav) + 4rem); // 128px is the height of the navbar (73px) + subnav (~56px)
   }
 }
 
