--- a/app/scss/sections/_recruitment.scss
+++ b/app/scss/sections/_recruitment.scss
@@ -141,10 +141,15 @@
     &__icon {
       height: 96px;
       width: 96px;
+      transition: transform 0.2s ease-in-out;
 
       @include breakpoint(md-tablet) {
         height: 64px;
         width: 64px;
+      }
+
+      &:hover {
+        transform: scale(1.1);
       }
     }
 
@@ -201,6 +206,10 @@
       width: 100%;
       border-radius: 5px;
       overflow: hidden;
+
+      &:hover {
+        outline: 2px solid var(--blue-200);
+      }
 
       &--off {
         filter: grayscale(1) opacity(0.4);
