--- a/app/scss/sections/_pricing.scss
+++ b/app/scss/sections/_pricing.scss
@@ -7,7 +7,6 @@
 
     @include breakpoint(lg-tablet) {
       grid-template-columns: 1fr;
-      gap: 0;
 
       &:first-child .pricing__set-img {
         margin-top: 0;
@@ -32,16 +31,41 @@
       pointer-events: all;
     }
 
+    &-text h4 {
+      @include breakpoint(lg-tablet) {
+        margin: 1rem 0;
+      }
+    }
+
+
+    &-1 {
+      .pricing__set-img {
+        width: 50%;
+      }
+    }
+
     &-3 {
       margin-top: 4rem;
+
+      .pricing__set-img {
+        width: 60%;
+      }
     }
 
     &-4 {
       margin-top: 4rem;
+
+      .pricing__set-img {
+        width: 70%;
+      }
     }
 
     &-6 {
       margin-top: 4rem;
+
+      .pricing__set-img {
+        width: 80%;
+      }
     }
 
     &-8 {
@@ -50,6 +74,10 @@
 
       @include breakpoint(lg-tablet) {
         margin-top: 0;
+      }
+
+      .pricing__set-img {
+        width: 90%;
       }
     }
 
@@ -63,11 +91,7 @@
 
       .pricing__set-img {
         transform: scaleX(-1);
-        width: 120%;
-
-        @include breakpoint(lg-tablet) {
-          width: 100%;
-        }
+        width: 100%;
       }
     }
 
