--- a/app/scss/sections/_pricing.scss
+++ b/app/scss/sections/_pricing.scss
@@ -1,5 +1,14 @@
 @use "../base/breakpoints" as *;
 
+$pricing-set-img-widths: (
+  1: 50%,
+  3: 60%,
+  4: 70%,
+  6: 80%,
+  8: 90%,
+  10: 100%
+);
+
 .pricing {
   &__set {
     display: grid;
@@ -29,70 +38,28 @@
 
     &-text {
       pointer-events: all;
-    }
 
-    &-text h4 {
-      @include breakpoint(lg-tablet) {
-        margin: 1rem 0;
+      h4 {
+        @include breakpoint(lg-tablet) {
+          margin: 1rem 0;
+        }
       }
     }
 
+    @each $set, $width in $pricing-set-img-widths {
+      &-#{$set} {
+        margin-top: if($set == 1, 0, 4rem);
+        pointer-events: if($set == 8 or $set == 10, none, all);
 
-    &-1 {
-      .pricing__set-img {
-        width: 50%;
+        .pricing__set-img {
+          width: $width;
+        }
       }
     }
 
-    &-3 {
-      margin-top: 4rem;
-
-      .pricing__set-img {
-        width: 60%;
-      }
-    }
-
-    &-4 {
-      margin-top: 4rem;
-
-      .pricing__set-img {
-        width: 70%;
-      }
-    }
-
-    &-6 {
-      margin-top: 4rem;
-
-      .pricing__set-img {
-        width: 80%;
-      }
-    }
-
-    &-8 {
-      margin-top: 0rem;
-      pointer-events: none;
-
-      @include breakpoint(lg-tablet) {
-        margin-top: 0;
-      }
-
-      .pricing__set-img {
-        width: 90%;
-      }
-    }
-
-    &-10 {
-      margin-top: -4rem;
-      pointer-events: none;
-
-      @include breakpoint(lg-tablet) {
-        margin-top: 0;
-      }
-
-      .pricing__set-img {
-        transform: scaleX(-1);
-        width: 100%;
-      }
+    // Reverse the image on the 10th set
+    &-10 .pricing__set-img {
+      transform: scaleX(-1);
     }
 
     &-detail {
