--- a/app/scss/base/_colors.scss
+++ b/app/scss/base/_colors.scss
@@ -1,6 +1,7 @@
 // Color Palette
 
 :root {
+  // Blues
   --blue-50: hsl(202, 100%, 95%);
   --blue-100: hsl(204, 100%, 86%);
   --blue-200: hsl(206, 93%, 73%);
@@ -12,9 +13,7 @@
   --blue-800: hsl(216, 98%, 25%);
   --blue-900: hsl(218, 100%, 17%);
 
-  --blend-color-dark: hsla(0, 0%, 0%, 0.5);
-  --blend-color-light: hsla(255, 255%, 100%, 0.5);
-
+  // Grays
   --warm-gray-50: hsl(0, 0%, 99%);
   --warm-gray-100: hsl(0, 0%, 95%);
   --warm-gray-200: hsl(210, 4%, 90%);
@@ -48,6 +47,7 @@
   --blue-gray-800: hsl(211, 39%, 23%);
   --blue-gray-900: hsl(209, 61%, 16%);
 
+  // Reds
   --red-50: hsl(360, 100%, 97%);
   --red-100: hsl(360, 82%, 89%);
   --red-200: hsl(360, 77%, 78%);
@@ -59,6 +59,7 @@
   --red-800: hsl(360, 85%, 25%);
   --red-900: hsl(360, 92%, 20%);
 
+  // Yellows
   --yellow-50: hsl(49, 100%, 96%);
   --yellow-100: hsl(48, 100%, 88%);
   --yellow-200: hsl(48, 95%, 76%);
@@ -70,6 +71,7 @@
   --yellow-800: hsl(22, 82%, 39%);
   --yellow-900: hsl(15, 86%, 30%);
 
+  // Teals
   --teal-50: hsl(165, 67%, 96%);
   --teal-100: hsl(163, 75%, 87%);
   --teal-200: hsl(162, 73%, 74%);
@@ -81,6 +83,9 @@
   --teal-800: hsl(172, 98%, 20%);
   --teal-900: hsl(176, 100%, 13%);
 
+  // Other
+  --blend-color-dark: hsla(0, 0%, 0%, 0.5);
+  --blend-color-light: hsla(255, 255%, 100%, 0.5);
   --animation-function: cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
   --shadow-color: 214deg 37% 59%;
@@ -95,7 +100,7 @@
     0px 1.5px 1.7px -0.8px hsl(var(--shadow-color) / 0.36),
     0px 3.7px 4.2px -1.7px hsl(var(--shadow-color) / 0.36),
     0.1px 9px 10.1px -2.5px hsl(var(--shadow-color) / 0.36);
-
+    
   --shadow-elevation-high:
     0px 0.3px 0.2px hsl(var(--shadow-color) / 0.64),
     0px 0.4px 0.3px -0.7px hsl(var(--shadow-color) / 0.56),
