--- a/app/scss/sections/_turnkey.scss
+++ b/app/scss/sections/_turnkey.scss
@@ -37,7 +37,7 @@
     .grid-lines {
       fill: none;
       stroke: var(--blue-gray-100);
-      stroke-miterlimit: 10
+      stroke-miterlimit: 10;
     }
   }
 
@@ -121,13 +121,13 @@
       }
 
       @include breakpoint(sm-tablet) {
-        font-size: .8rem;
+        font-size: 0.8rem;
       }
     }
   }
 
   &__mining {
-    line-height: .85;
+    line-height: 0.85;
 
     @include breakpoint(lg-tablet) {
       text-align: center;
@@ -232,7 +232,7 @@
 
     span {
       font-family: var(--light-wide-font);
-      margin-left: .2rem;
+      margin-left: 0.2rem;
       letter-spacing: 1px;
       text-transform: uppercase;
 
@@ -241,7 +241,7 @@
       }
 
       @include breakpoint(sm-mobile) {
-        letter-spacing: .5px;
+        letter-spacing: 0.5px;
         font-family: var(--medium-wide-font);
         font-size: 0.6rem;
       }
@@ -271,10 +271,9 @@
     h2 {
       font-size: 5rem;
       font-weight: 900;
-      line-height: .7;
+      line-height: 0.7;
       margin-top: 1rem;
-      letter-spacing: -.5px;
-
+      letter-spacing: -0.5px;
       color: var(--blue-500);
 
       @include breakpoint(sm-tablet) {
@@ -291,9 +290,8 @@
       margin-top: 2rem;
       font-family: var(--medium-font);
       position: relative;
-      letter-spacing: .2px;
+      letter-spacing: 0.2px;
       text-transform: uppercase;
-
       color: var(--blue-500);
     }
 
