minor styling changes to homepage

--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -101,7 +101,8 @@ small {
     color: var(--blue-gray-600);
 
     @include breakpoint(sm-tablet) {
-      max-width: 30ch;
+      max-width: 35ch;
+      text-align: center;
     }
   }
 
