--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -122,6 +122,7 @@
     @include breakpoint(md-tablet) {
       align-items: center;
       text-align: center;
+      gap: 2rem;
       width: auto;
     }
 
@@ -192,6 +193,10 @@
     @include breakpoint(lg-tablet) {
       align-items: center;
       text-align: center;
+    }
+
+    @include breakpoint(md-tablet) {
+      gap: 2rem;
     }
 
     &__btn {
